Fixed src for @2x images; removed unncescessary  comments and vars from JS; making sure the attr check from retina images works

--- a/public/index.html
+++ b/public/index.html
@@ -37,24 +37,25 @@
 						<iframe width="560" height="315" src="//www.youtube.com/embed/aYxni8ohTfU" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="paw-carousel-item">
-						<img src="images/x.gif" data-src="assets/media/egs/eg-02.jpg" data-src-2x="assets/media/egs/eg-02@2x.jpg" width="494" height="370" class="paw-carousel-item-media">
+						<!-- image without retina -->
+						<img src="images/x.gif" data-src="assets/media/egs/eg-02.jpg" width="494" height="370" class="paw-carousel-item-media">
 						<h3>This is some description text</h3>
 					</div>
 					<div class="paw-carousel-item">
-						<img src="images/x.gif" data-src="assets/media/egs/eg-03.jpg" data-src-2x="assets/media/egs/eg-03.jpg@2x" width="446" height="370" class="paw-carousel-item-media">
+						<img src="images/x.gif" data-src="assets/media/egs/eg-03.jpg" data-src-2x="assets/media/egs/eg-03@2x.jpg" width="446" height="370" class="paw-carousel-item-media">
 						<h3>This is some description text</h3>
 					</div>
 					
 					<div class="paw-carousel-item">
-						<img src="images/x.gif" data-src="assets/media/egs/eg-04.jpg" data-src-2x="assets/media/egs/eg-04.jpg@2x" width="612" height="370" class="paw-carousel-item-media">
+						<img src="images/x.gif" data-src="assets/media/egs/eg-04.jpg" data-src-2x="assets/media/egs/eg-04@2x.jpg" width="612" height="370" class="paw-carousel-item-media">
 						<h3>This is some description text</h3>
 					</div>
 					<div class="paw-carousel-item">
-						<img src="images/x.gif" data-src="assets/media/egs/eg-05.jpg" data-src-2x="assets/media/egs/eg-05.jpg@2x" width="791" height="370" class="paw-carousel-item-media">
+						<img src="images/x.gif" data-src="assets/media/egs/eg-05.jpg" data-src-2x="assets/media/egs/eg-05@2x.jpg" width="791" height="370" class="paw-carousel-item-media">
 						<h3>This is some description text</h3>
 					</div>
 					<div class="paw-carousel-item">
-						<img src="images/x.gif" data-src="assets/media/egs/eg-06.jpg" data-src-2x="assets/media/egs/eg-01.jpg@2x" width="494" height="370" class="paw-carousel-item-media">
+						<img src="images/x.gif" data-src="assets/media/egs/eg-06.jpg" data-src-2x="assets/media/egs/eg-06@2x.jpg" width="494" height="370" class="paw-carousel-item-media">
 						<h3>This is some description text</h3>
 					</div>
 					
