Explaining correctly what happens to carousel images at narrow screen sizes

--- a/public/index.html
+++ b/public/index.html
@@ -252,8 +252,8 @@ $(function(){
 			<p>Older versions of Firefox, Safari and Chrome; as well as IE7+. IE 7 &amp; 8 may have animation/performance issues depending on how many images you have.</p>
 			<h3>Can I have images at different sizes?</h3>
 			<p>The carousel looks best when the images are the same height, but can be any width.</p>
-			<h3>What happens to different width images at smaller screen &amp; mobile sizes?</h3>
-			<p>The images are set to have a max width of the containing carousel. Currently, if the heights are different because the images have been scaled according to width, the images are set to the smallest height and larger images will be cropped from the bottom.</p>
+			<h3>What happens to different width images at narrower screen &amp; mobile sizes?</h3>
+			<p>The images will be cropped in from the sides leaving the centre of the images. If we scaled the images keeping their ratio the carousel tends to becomes comically short.</p>
 			<h3>Why not generate more of the markup through JS?</h3>
 			<p>I may change my mind about it the future, but I like to keep the JS small and lean. I am aware it could help eliminate human error e.g. forgetting to add the inner 'paw-carousel-media' DIV.</p>
 			<h3>Code Copyright and License</h3>
