Choose whether to resize or crop images at smaller screen sizes; better reveal/initial load with image load check; Chrome initial image size calculation fix.

--- a/README.html
+++ b/README.html
@@ -10,6 +10,7 @@
 <li>Better loading of images to look smoother</li>
 <li>More reliable video scaling</li>
 <li>More robust at all screen sizes</li>
+<li>Choose whether to resize or crop images at smaller screen sizes</li>
 <li>Must include image and video dimensions – solves a lot of headaches</li>
 </ul>
 
